--- a/package.json
+++ b/package.json
@@ -14,13 +14,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google-cloud/speech": "^6.7.0",
+    "@google-cloud/text-to-speech": "^5.4.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
-    "next": "^14.2.4",
+    "google-gax": "^4.4.1",
+    "install": "^0.13.0",
+    "lucide-react": "^0.451.0",
+    "microphone-stream": "^6.0.1",
+    "next": "^14.2.15",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "socket.io-client": "^4.8.0",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
