Refactor webpack configuration and update TypeScript exclude

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
+    "next.config.js",
     ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
